<resources>
    <string name="app_name">Pixel 4D</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="featured">Featured</string>
    <string name="free">Free</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="name">Pixel 4D</string>
    <string name="signin">Sign In</string>
    <string name="signin_text">Sign in &amp; save your purchases</string>
    <string name="premium"> Go Premium</string>
    <string name="categories"> Categories</string>
    <string name="setting"> Setting</string>
    <string name="support"> Support</string>
    <string name="remove_add">Remove Ads</string>
    <string name="stop">Stop Ads</string>
    <string name="manage">Manage Subscription</string>
    <string name="save">Sign in &amp; save your purchases </string>
    <string name="tex">An auto renewable 3 month subscription will we activated</string>
    <string name="unlock">unlock all live walpapers</string>
</resources>