<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/black"
    android:gravity="center_vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/name"
        android:fontFamily="sans-serif-condensed-medium"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.8"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/user_icon"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:text="@string/signin"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="@color/gray"
                android:layout_height="wrap_content"/>
           <TextView
                        android:layout_width="match_parent"
                        android:text="@string/signin_text"
                        android:textSize="12dp"
                        android:textColor="@color/gray"
                        android:layout_height="wrap_content"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>