<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:fitsSystemWindows="true"

    tools:openDrawer="start">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:background="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/gray"
        app:headerLayout="@layout/nav_header_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:background="@color/mat_black"
            android:layout_marginTop="180dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:id="@+id/premium"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/user_icon"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/premium"
                    android:layout_marginLeft="10dp"
                    android:textSize="14dp"
                    android:textColor="@color/gray"
                    android:fontFamily="sans-serif-black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/user_icon"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/premium"
                    android:textSize="14dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/gray"
                    android:fontFamily="sans-serif-black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/ic_baseline_image_24"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/premium"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/recycle"
                android:scrollbars="vertical"
                android:background="@color/mat_black"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginRight="20dp"
                android:layout_height="200dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/setting_icon"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/setting"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="20dp"
                    android:src="@drawable/support_icon"
                    android:layout_height="20dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/support"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-black"
                    android:textColor="@color/gray"
                    android:textSize="14dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>





        </LinearLayout>





    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>